RESOLVED FIXED215873
REGRESSION: touchbar controls don't reflect video state in fullscreen
https://bugs.webkit.org/show_bug.cgi?id=215873
Summary REGRESSION: touchbar controls don't reflect video state in fullscreen
Devin Rousso
Reported 2020-08-26 16:41:28 PDT
# STEPS TO REPRODUCE 1. load any page with a video 2. play the video 3. make the video fullscreen 4. pause by pressing space or clicking the pause button in the video controls => TouchBar play/pause button doesn't update
Attachments
Patch (3.47 KB, patch)
2020-08-26 16:53 PDT, Devin Rousso
eric.carlson: review+
ews-feeder: commit-queue-
Patch (3.47 KB, patch)
2020-08-26 18:31 PDT, Devin Rousso
no flags
Devin Rousso
Comment 1 2020-08-26 16:41:46 PDT
Devin Rousso
Comment 2 2020-08-26 16:53:17 PDT
EWS
Comment 3 2020-08-26 18:30:20 PDT Comment hidden (obsolete)
Devin Rousso
Comment 4 2020-08-26 18:31:47 PDT
EWS
Comment 5 2020-08-26 20:35:23 PDT
Committed r266218: <https://trac.webkit.org/changeset/266218> All reviewed patches have been landed. Closing bug and clearing flags on attachment 407364 [details].
Note You need to log in before you can comment on or make changes to this bug.