REGRESSION: touchbar controls don't reflect video state in fullscreen https://bugs.webkit.org/show_bug.cgi?id=215873 <rdar://problem/66723354>

Reviewed by Eric Carlson.

* platform/mac/WebPlaybackControlsManager.h:
* platform/mac/WebPlaybackControlsManager.mm:
(-[WebPlaybackControlsManager setPlaying:]):
(-[WebPlaybackControlsManager isPlaying]):
Create an actual ivar `_playing` for holding the play/pause state. This is needed because
`AVTouchBarScrubber` uses KVO to update the state of the play/pause button whenever the
related video controller (in this case `AVTouchBarPlaybackControlsControlling`) changes
using an `NSValueBinding`. KVO needs an actual ivar in order to function properly.


Canonical link: https://commits.webkit.org/228672@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266218 268f45cc-cd09-0410-ab3c-d52691b4dbfc